--- a/CA2_Talents_Webapp/Views/Home/Index.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Index.cshtml
@@ -98,6 +98,7 @@
                 </div>
             </form>
             <a href="/Home/Login">Already a user? Login here...</a>
+            <a href="/Home/GuestUser">Continue as guest</a>
         </div>
     </div>
 </div>
