--- a/CA2_Talents_Webapp/Views/Home/Login.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Login.cshtml
@@ -7,19 +7,19 @@
 <form action="/Userpool/SignInUser" method="post" class="login-form">
     <h1>Login</h1>
     <div class="inputContainer" id="emailInputContainer">
-        <input type="email">
+        <input type="email" name="loginEmail">
         <span data-placeholder="Email"></span>
     </div>
 
     <div class="inputContainer" id="passwordInputContainer">
-        <input type="password">
+        <input type="password" name="loginPassword">
         <span data-placeholder="Password"></span>
     </div>
 
     <input type="submit" class="loginBtn" value="Login">
 
     <div class="bottom-text">
-        <a href="#">Continue as guest</a>
+        <a href="/Home/GuestUser">Continue as guest</a>
     </div>
 </form>
 
