--- a/CA2_Talents_Webapp/Views/Home/Login.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Login.cshtml
@@ -7,12 +7,12 @@
 <form action="/Userpool/SignInUser" method="post" class="login-form">
     <h1>Login</h1>
     <div class="inputContainer" id="emailInputContainer">
-        <input type="email">
+        <input type="email" name="email" id="email" placeholder="">
         <span data-placeholder="Email"></span>
     </div>
 
     <div class="inputContainer" id="passwordInputContainer">
-        <input type="password">
+        <input type="password" name="password" id="password" placeholder="">
         <span data-placeholder="Password"></span>
     </div>
 
