change comment input to button

--- a/CA2_Talents_Webapp/Views/Home/Main.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Main.cshtml
@@ -365,7 +365,7 @@
                                               ><i class="fas fa-times"></i></span>
                                         <p id="hiddenID${i}" hidden="true"><%=rewards.get(i).getRewardID()%></p>
                                     </div>
-                                    <input class="btn btn-primary commentBtnClass" onclick="goToDiscussion()" type="button" id="commentBtn" value="Comment">
+                                    <button class="btn btn-primary commentBtnClass" onclick="goToDiscussion()" id="commentBtn" value="Comment">Comment<button>
                                 </div>
                             </div></td>`);
 
