Working NSFW, image upload, Recombee

--- a/CA2_Talents_Webapp/Views/Home/Discussion.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Discussion.cshtml
@@ -127,10 +127,11 @@
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         vertical-align: middle;
         margin-left: 2rem;
+        color: royalblue;
     }
 
     #inlineDiv p, #inlineDiv button{
-        display:inline;
+        display: inline;
     }
 
     @@keyframes pulse-animation {
